--- a/src/Docfx.Build.RestApi/Docfx.Build.RestApi.csproj
+++ b/src/Docfx.Build.RestApi/Docfx.Build.RestApi.csproj
@@ -1,5 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="Microsoft.OpenApi.Readers" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Docfx.Build.Common\Docfx.Build.Common.csproj" />
     <ProjectReference Include="..\Docfx.Common\Docfx.Common.csproj" />
     <ProjectReference Include="..\Docfx.DataContracts.Common\Docfx.DataContracts.Common.csproj" />
